# recast-detour

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/recast-detour-rs/: Cargo.toml
crates/recast-detour-rs/src/: lib.rs  nav_obj.rs  util.rs
crates/recast-detour-rs/tests/: integration_test.rs
crates/recast-detour-sys/: .gitignore  Cargo.toml  build.rs
crates/recast-detour-sys/recast/: CMakeLists.txt
crates/recast-detour-sys/recast/recastc/: CMakeLists.txt  STUDY.md
crates/recast-detour-sys/recast/recastc/Include/: recastc.h
crates/recast-detour-sys/recast/recastc/Source/: recastc.cpp
crates/recast-detour-sys/src/: lib.rs
exporters/: NavMeshExporter.cs
