[package]
name = "recast-detour-rs"
version = "0.2.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
edition = "2018"
description = "A simplified (detour only) rust binding for Recast & Detour library"
exclude = ["recast/build/*"]
homepage = "https://github.com/edwin0cheng/recast-detour"
repository = "https://github.com/edwin0cheng/recast-detour"
license = "MIT"

[dev-dependencies]
rand = "0.6.5"

[dependencies]
recastnavigation-sys = {version = "1.0.0", features = ["detour"]}
