[package]
name = "recast-detour-sys"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
edition = "2018"
description = "A simplified (detour only) rust binding for Recast & Detour library (sys crate)"
exclude = ["recast/build/*"]
homepage = "https://github.com/edwin0cheng/recast-detour"
repository = "https://github.com/edwin0cheng/recast-detour"
license = "MIT"

[dependencies]

[dev-dependencies]
insta = "0.7.4"

[build-dependencies]
cmake = "0.1"

[features]
skip-build-recast = []
default = []
